# chessEngine

./: .gitignore  CMakeLists.txt  README.md
chessGameHeader/: chessBoard.hpp  chessGame.hpp  square.hpp
chessGameSrc/: chessBoard.cpp  chessGame.cpp  main.cpp  square.cpp
header/: bishop.hpp  chessBoard.hpp  chessGame.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  square.hpp
piecesHeader/: bishop.hpp  king.hpp  pawn.hpp  piece.hpp  queen.hpp
piecesSrc/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
src/: bishop.cpp  chessBoard.cpp  chessGame.cpp  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp  square.cpp
testChessGame/: chessBoardTest.cpp  chessGameTest.cpp  squareTest.cpp
testPieces/: bishopTest.cpp  kingTest.cpp  knightTest.cpp  pawnTest.cpp  queenTest.cpp  rookTest.cpp
